# ledlight-controller

./: README.md  pyproject.toml
config/: settings.toml
src/ledlight_controller/: __init__.py  camera_client.py  config.py  image_analysis.py  light_client.py  main.py  models.py  pipeline.py  service.py  settings_loader.py
src/ledlight_controller/scripts/: tapo_capture_loop.py  tuya_color_test.py
